--- a/app/index.html
+++ b/app/index.html
@@ -22,8 +22,8 @@
       <div class="wrapper">
         <div class="site-header__nav">
           <img src="assets/images/icons/logo.png" alt="Montreal logo" />
-          <div class="menu-icon">&#9776;</div>
-          <div class="menu-icon menu-icon-close hidden">&#x2715;</div>
+          <div class="menu-icon"><img src="assets/images/icons/menu.png" alt="Menu Icon" /></div>
+          <div class="menu-icon menu-icon-close hidden"><img src="assets/images/icons/close.png" alt="Close Icon" /></div>
           <div class="nav nav-hidden">
             <ul>
               <li><a href="#services">Services</a></li>
@@ -35,7 +35,7 @@
         </div>
         <h1 class="site-header__title">Wake the Design</h1>
         <p class="site-header__blurb">
-          Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. 
+          Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam vehicula elemen-tum sed sit amet dui. 
           Donec sollicitudin molestie malesuada. Nulla porttitor accumsan tincidunt.
         </p>
         <button id="who-we-are" class="button button--black">Who we are?</button>
@@ -44,7 +44,7 @@
 
     <div class="quote page-section page-section--yellow">
       <div class="wrapper">
-        <p class="generic-content generic-content--center">“Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.”</p>
+        <p class="generic-content generic-content--padding-left generic-content--center">“Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.”</p>
       </div>        
     </div>
 
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="services__button">
-          <button id="launch-project" class="button button--white">Launch Project Now</button>  
+          <button id="launch-project" class="button button--white"><span>Launch Project Now</span></button>  
         </div>      
       </div>
     </div>
@@ -115,7 +115,7 @@
     <div id="portfolio" class="portfolio page-section">
       <div class="wrapper">
         <p class="section-title">Works So Far...</p>
-        <p class="generic-content">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
+        <p class="portfolio__content generic-content">Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
             Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.</p>
         <div class="portfolio__nav">
           <button id="all" class="button button--rectangle button--active portfolio-button">All</button>
@@ -133,7 +133,7 @@
         <div class="main">
           <div class="portfolio-works-grid__header">
             <p class="title">Super Awesome Work</p>
-            <p class="generic-content">
+            <p class="description generic-content generic-content--white">
               Congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. 
               Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.
             </p>
@@ -254,7 +254,7 @@
       </div>
     </div>
 
-    <div class="scroll-to-top">&#8593;</div>
+    <div class="scroll-to-top"><img src="assets/images/icons/up.png" alt="Scroll to top Icon" /></div>
 
     <footer class="site-footer">
       <p class="generic-content generic-content--white generic-content--center">
