--- a/app/index.html
+++ b/app/index.html
@@ -261,7 +261,7 @@
         &copy; 2016 - <a href="http://www.graphberry.com/item/montreal-creative-portfolio-theme" target="_blank">
           Montreal
         </a>
-         All Right Reserved
+         All Rights Reserved
       </p>
       <div class="social-icons">
         <img src="assets/images/icons/Facebook.png" alt="Facebook Icon" />
