--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+    <!-- Header -->
     <header class="site-header">
       <div class="wrapper">
         <div class="site-header__nav">
@@ -40,14 +41,16 @@
         </p>
         <button id="who-we-are" class="button button--black">Who we are?</button>
       </div>
-    </header>
+    </header><!-- end Header -->
 
+    <!-- Quote -->
     <div class="quote page-section page-section--yellow">
       <div class="wrapper">
         <p class="generic-content generic-content--padding-left generic-content--center">“Donec rutrum congue leo eget malesuada. Vivamus magna justo, lacinia eget consectetur sed, convallis at tellus. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi.”</p>
       </div>        
-    </div>
+    </div><!-- end Quote -->
 
+    <!-- Services -->
     <div id="services" class="page-section">
       <div class="wrapper">
         <div class="services">
@@ -83,8 +86,9 @@
           <button id="launch-project" class="button button--white"><span>Launch Project Now</span></button>  
         </div>      
       </div>
-    </div>
+    </div><!-- end Services -->
 
+    <!-- Stats -->
     <div class="page-section page-section--black">
       <div class="wrapper">
         <div class="stats">
@@ -110,8 +114,9 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><!-- end Stats -->
 
+    <!-- Portfolio -->
     <div id="portfolio" class="portfolio page-section">
       <div class="wrapper">
         <p class="section-title">Works So Far...</p>
@@ -167,8 +172,9 @@
     </div>
     <div class="portfolio-more page-section">
       <button class="button button--white portfolio-button--more">Load more projects</button>
-    </div>
+    </div><!-- end Portfolio -->
 
+    <!-- Clients -->
     <div id="clients" class="clients page-section page-section--black">
       <div class="wrapper">
         <p class="section-title">Our Clients...</p>
@@ -188,8 +194,9 @@
           <div class="nav-3"></div>
         </div>
       </div>
-    </div>
+    </div><!-- end Clients -->
 
+    <!-- Contact Us -->
     <div id="contact" class="contact page-section">
       <div class="wrapper">
         <p class="section-title">Contact Us...</p>
@@ -220,8 +227,9 @@
           <div class="error"></div>
         </div>
       </div>
-    </div>
+    </div><!-- end Contact Us -->
 
+    <!-- Contact -->
     <div class="page-section page-section--yellow">
       <div class="wrapper">
         <div class="contact-info">
@@ -252,10 +260,13 @@
           </div>
         </div>
       </div>
-    </div>
+    </div><!-- end Contact -->
 
+    <!-- Scroll to Top Icon -->
     <div class="scroll-to-top"><img src="assets/images/icons/up.png" alt="Scroll to top Icon" /></div>
+    <!-- end Scroll to Top Icon -->
 
+    <!-- Footer -->
     <footer class="site-footer">
       <p class="generic-content generic-content--white generic-content--center">
         &copy; 2016 - <a href="http://www.graphberry.com/item/montreal-creative-portfolio-theme" target="_blank">
@@ -270,7 +281,7 @@
         <img src="assets/images/icons/Google.png" alt="Google Icon" />
         <img src="assets/images/icons/Youtube.png" alt="YouTube Icon" />
       </div>
-    </footer>
+    </footer><!-- end Footer -->
   
   <!-- build:js assets/scripts/App.js -->
   <script src="/temp/scripts/App.js"></script>
